--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,8 @@ dependencies:
   latlong2: ^0.9.0
   geolocator: ^10.1.0
   cupertino_icons: ^1.0.6
-
+  shared_preferences: ^2.2.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
