--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   geolocator: ^10.1.0
   cupertino_icons: ^1.0.6
   shared_preferences: ^2.2.2
+  google_mlkit_image_labeling: ^0.14.1
+  image_picker: ^1.0.7
+  google_mlkit_barcode_scanning: ^0.14.0
   
 dev_dependencies:
   flutter_test:
@@ -24,6 +27,4 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/models/
-    - assets/images/
-    - assets/sounds/
+    - assets/images/sled.png
